tests/fail/sovereign_shape.stderr
error[E0445]: Shape 'Resource' manages raw pointers but does not implement 'drop'
 --> tests/fail/sovereign_shape.tk:14:7
   |
 14 | shape Resource(
   |       ^
error[E0444]: Shape 'Resource' manages resources but does not implement 'drop'
 --> tests/fail/sovereign_shape.tk:14:7
   |
 14 | shape Resource(
   |       ^
error[E0458]: Shape 'Resource' manages resources (raw pointers) but does not implement 'clone'
 --> tests/fail/sovereign_shape.tk:14:7
   |
 14 | shape Resource(
   |       ^
error[E0448]: Pointer morphology mismatch: expected explicit '*' (from LHS/Target), found 'value' (from RHS/Source)
 --> tests/fail/sovereign_shape.tk:19:14
   |
 19 |     auto r = Resource(ptr = 0 as *i32)
   |              ^
